--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,15 @@
 <h1><%= @cocktail.name %></h1>
 
+<% @cocktail.doses.each do |dose| %>
+  <p><%= dose.ingredient.name %></p>
+  <p><%= dose.description %></p>
+  <%= link_to "delete", dose_path(dose), method: :delete %>
+<% end %>
+
+
+
+<%= link_to "< back", cocktails_path %>
+<%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail) %>
+
 
 
