--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,12 +1,15 @@
-<h1>Cocktails</h1>
+<h1 class="new_cocktail">Cocktails</h1>
 
 <%= link_to "New Cocktail", new_cocktail_path %>
 
-
-<ul>
- <% @cocktails.each do |cocktail|%>
- <li><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
- <% end %>
-
-</ul>
-
+<div class="container">
+  <% @cocktails.each do |cocktail|%>
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="card">
+        <%= link_to cocktail.name, cocktail_path(cocktail), class: "cocktail_name" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
