--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,20 @@
 <h1><%= @cocktail.name %></h1>
 
-<% @cocktail.doses.each do |dose| %>
-  <p><%= dose.ingredient.name %></p>
-  <p><%= dose.description %></p>
-  <%= link_to "delete", dose_path(dose), method: :delete %>
-<% end %>
+
+<div class="container">
+
+  <% @cocktail.doses.each do |dose| %>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-8">
+          <p><%= dose.ingredient.name %></p>
+          <p><%= dose.description %></p>
+          <%= link_to "delete", dose_path(dose), method: :delete, class: "btn btn-primary" %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
 
 
