--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -4,6 +4,7 @@
 <div class="form">
   <%= simple_form_for @cocktail do |f| %>
     <%= f.input :name, placeholder: 'Mojito', hint: 'No special characters.' %>
+    <%= f.input :picture  %>
     <%= f.button :submit, class: "btn btn-primary" %>
   <% end %>
 </div>
